# redbone

./: .gitignore  Dockerfile  README.md  config.yml  demo.py  docker-compose.yml  listener.py  pyproject.toml  requirements.txt  setup.cfg  tiktok.Dockerfile
.devcontainer/: devcontainer.json
docs/project-design/: project-proposal.md  user-stories.md
docs/project-design/api-analysis/: tiktok.md
images/: Dockerfile
redbone/: schema.py
redbone/source/: twitter.py
src/: schema.py
src/wrapper/: twitter.py
tests/source/: test_twitter.py
