[metadata]
name = charon
author = Alicia Bargar
version = 0.0.0
description = Stream and store social media data
long_description = Collect, store, and surface social media data for analysis
keywords = streaming, features, social

[options]
python_requires = >= 3.8, <4
install_requires = 
    feast >= 0.20

[options.extras_require]
dev = 
    pytest
    black
    flake8
