[metadata]
name = redbone
author = Alicia Bargar
version = 0.0.0
description = Stream and store social media data
long_description = Collect, store, and surface social media data for analysis
keywords = streaming, features, social
py_modules=["redbone"]

[options]
python_requires >= 3.9, <4
install_requires = 
    feast >= 0.20.*, <0.23.*
    jupyter-notebook >= 6.4,<7.0 # Not needed longterm
    pandas>=1.4,<1.5
    # TikTokApi>=5.0.0
    tweepy

[options.extras_require]
dev = 
    pytest
    black
    flake8
